# Kestrel

./: .gitignore  README.md  alembic.ini  pyproject.toml
kestrel/: __init__.py  __main__.py
kestrel/bootstrap/: application.py  container.py  exceptions.py  lifecycle.py
kestrel/cli/: app.py
kestrel/cli/commands/: asset.py  evidence.py  finding.py  project.py  target.py
kestrel/config/: manager.py  schema.py
kestrel/config/defaults/: default_config.yaml
kestrel/core/: bootstrap.py  constants.py  logger.py  logging_config.py  paths.py
kestrel/database/: base.py  engine.py  exceptions.py  manager.py  session.py
kestrel/database/migrations/: env.py
kestrel/database/migrations/versions/: 8b103749517c_initial_schema.py  92c0d8de47f9_fix_evidence_schema.py  a50a3eeafc61_finding_management.py
kestrel/database/models/: __init__.py  asset.py  base.py  evidence.py  finding.py  kestrel.db  mixins.py  project.py  registry.py  target.py
kestrel/services/: __init__.py  asset_service.py  evidence_service.py  finding_service.py  project_service.py  target_service.py
kestrel/workspace/: constants.py  exceptions.py  manager.py  models.py  paths.py
